--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,37 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-thunk": "^2.1.0",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "fs": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
-    "react-confirm-alert": "^3.0.6",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "timeago.js": "^4.0.2",
+    "react-scripts": "4.0.3",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
